--- a/furniture/furni/templates/furni/leaders.html
+++ b/furniture/furni/templates/furni/leaders.html
@@ -7,10 +7,8 @@
     <div class="row justify-content-between">
       <div class="col-lg-5">
         <div class="intro-excerpt">
-          <h1>Our<span class="d-block"> Founders</span></h1>
-          <p class="mb-4">Leadership is more than direction—it’s about inspiring people, fostering growth, and creating
-            opportunities for the future. Our leaders embody this spirit, guiding us with integrity and vision while ensuring
-            every step we take reflects our culture of trust, innovation, and resilience</p>
+          <h1>Our Leaders<span class="d-block"></span></h1>
+          <p class="mb-4">Behind every achievement stands a team of leaders who bring together expertise, dedication, and a shared vision for the future. Discover the people who guide us forward with passion and purpose.</p>
           <p><a href="shop" class="btn btn-secondary me-2">Shop Now</a><a href="shop" class="btn btn-white-outline">Explore</a>
           </p>
         </div>
@@ -24,7 +22,7 @@
   </div>
 </div>
 <!-- End Hero Section -->
-<section class="py-5 bg-white" style="margin-top: 100px">
+<section class="py-5 bg-white" style="margin-top: 150px">
   <div class="container">
     <h2 class="mb-5 text-center fw-bold text-primary">Meet The Founders</h2>
     <div class="row g-4 justify-content-center">
@@ -47,7 +45,7 @@
               <h5 class="fw-bold">Anand Anil</h5>
               <p class="text-muted mb-1">Founder & CEO</p>
               <p class="small">
-                With over 25 years in the furniture industry, John leads Module with a vision to blend tradition and innovation, bringing timeless designs to modern homes.
+                With over 25 years in the furniture industry, Anand leads Module with a vision to blend tradition and innovation, bringing timeless designs to modern homes.
               </p>
             </div>
 
