--- a/furniture/templates/footer.html
+++ b/furniture/templates/footer.html
@@ -82,45 +82,41 @@
 						</ul>
 					</div>
 				</div>
-				<!--
+				
 						<div class="payment-methods ms-4" style="padding-top:80px;">
-        <p class="fw-bold mb-2"></p>
-        <div class="d-flex flex-wrap gap-2" ">
-            <img src="{% static 'images/visa.jpg' %}" alt="Visa" height="32">
-            <img src="{% static 'images/mastercard.jpg' %}" alt="MasterCard" height="32">
-            <img src="{% static 'images/maestro1.png' %}" alt="Maestro" height="32">
-            <img src="{% static 'images/amex.jpg' %}" alt="American Express" height="32">
-            <img src="{% static 'images/diners.jpg' %}" alt="RuPay" height="32">
-            <img src="{% static 'images/upi1.jpg' %}" alt="Diners Club" height="32">
-            <img src="{% static 'images/wallet.jpg' %}" alt="Wallet" height="32">
-            <img src="{% static 'images/net.jpg' %}" alt="Net Banking" height="32">
-        </div>
+        
     </div>
--->
+
 			</div>
 
 		</div>
 
 		<div class="border-top copyright">
-			<div class="row pt-4">
-				<div class="col-lg-6">
-					<p class="mb-2 text-center text-lg-start">Copyright &copy;
-						<script>document.write(new Date().getFullYear());</script>. All Rights Reserved. &mdash;
-						Designed with love by <a href="https://untree.co">Untree.co</a>
-						<!-- License information: https://untree.co/license/ -->
-					</p>
-				</div>
+  <div class="d-flex justify-content-between align-items-center pt-4 flex-wrap">
+    
+    <!-- Left side -->
+    <p class="mb-2 text-center text-lg-start">
+      Copyright &copy;
+      <script>document.write(new Date().getFullYear());</script> Module Furnitures. All Rights Reserved.
+    </p>
 
-				<div class="col-lg-6 text-center text-lg-end">
-					<ul class="list-unstyled d-inline-flex ms-auto">
-						<li class="me-4"><a href="#">Terms &amp; Conditions</a></li>
-						<li><a href="#">Privacy Policy</a></li>
-					</ul>
-				</div>
+    <!-- Right side -->
+    <div class="d-flex flex-wrap align-items-center justify-content-lg-end justify-content-center gap-2 text-center">
+      
+      <img src="{% static 'images/visa.jpg' %}" alt="Visa" height="32">
+      <img src="{% static 'images/mastercard.jpg' %}" alt="MasterCard" height="32">
+      <img src="{% static 'images/maestro1.png' %}" alt="Maestro" height="32">
+      <img src="{% static 'images/amex.jpg' %}" alt="American Express" height="32">
+      <img src="{% static 'images/rupay.jpg' %}" alt="RuPay" height="32">
+      <img src="{% static 'images/upi1.jpg' %}" alt="UPI" height="32">
+      <img src="{% static 'images/wallet.jpg' %}" alt="Wallet" height="32">
+      <img src="{% static 'images/net.jpg' %}" alt="Net Banking" height="32">
+    </div>
+
+  </div>
+</div>
 
 
-			</div>
-		</div>
 
 	</div>
 </footer>
