--- a/furniture/templates/navbar.html
+++ b/furniture/templates/navbar.html
@@ -22,7 +22,8 @@
 		<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 		<link href="{% static 'css/tiny-slider.css' %}" rel="stylesheet">
 		<link href="{% static 'css/style.css' %}" rel="stylesheet">
-		<title>Furni Free Bootstrap 5 Template for Furniture and Interior Design Websites by Untree.co </title>
+		<title>Module Furnitures</title>
+		<link rel="icon" type="image/png" href="{% static 'images\module-logo.png' %}">
     </head>
     
     <body>
@@ -48,7 +49,11 @@
 					</ul>
 
 					<ul class="custom-navbar-cta navbar-nav mb-2 mb-md-0 ms-5">
-						<li><a class="nav-link" href="#"><img src="{% static 'images/user.svg' %}"></a></li>
+						{% if user.is_authenticated %}
+						<li><a class="nav-link "href="{% url 'logoutpage' %}"><img src="{% static 'images/logout4.svg' %}"></a></li>
+						{% else %}
+						<li><a class="nav-link" href="{% url 'loginpage' %}"><img src="{% static 'images/user.svg' %}"></a></li>
+						{% endif %}
 						<li><a class="nav-link" href="{% url 'cart' %}"><img src="{% static 'images/cart.svg' %}"></a></li>
 					</ul>
 				</div>
