--- a/furniture/furni/templates/furni/shop.html
+++ b/furniture/furni/templates/furni/shop.html
@@ -1,6 +1,7 @@
 {% extends 'main.html' %}
 {% block content %}
 <div class="bg-light py-2 border-bottom">
+	<!--
   <div class="container d-flex justify-content-between">
     <div>
       <a href="#" class="mx-2 text-dark text-decoration-none">Living</a>
@@ -13,7 +14,7 @@
       <a href="#" class="mx-2 text-dark text-decoration-none">3 Seater Sofa</a>
       <a href="#" class="mx-2 text-dark text-decoration-none">Sofa Set</a>
     </div>
-  </div>
+  </div>-->
 </div>
 
 		
