--- a/furniture/templates/footer.html
+++ b/furniture/templates/footer.html
@@ -102,7 +102,7 @@
 
     <!-- Right side -->
     <div class="d-flex flex-wrap align-items-center justify-content-lg-end justify-content-center gap-2 text-center">
-      
+      <p style="margin-top: 11px;">We Accept</p>
       <img src="{% static 'images/visa.jpg' %}" alt="Visa" height="32">
       <img src="{% static 'images/mastercard.jpg' %}" alt="MasterCard" height="32">
       <img src="{% static 'images/maestro1.png' %}" alt="Maestro" height="32">
