--- a/furniture/furni/templates/furni/product.html
+++ b/furniture/furni/templates/furni/product.html
@@ -2,7 +2,7 @@
 {% load humanize %}
 {% block content %}
 {% load static %}
- <div class="container py-5">
+<div class="container py-5">
   <div class="row">
     <!-- Product Images (Sticky Left) -->
     <div class="col-md-6">
@@ -55,7 +55,8 @@
       <!-- Quantity & Price -->
       <div class="d-flex align-items-center mb-3">
         <button class="btn btn-outline-secondary btn-sm" onclick="adjustQty(-1)">-</button>
-        <input id="qtyInput" type="text" value="1" class="form-control form-control-sm mx-2 text-center" style="width: 50px;">
+        <input id="qtyInput" type="text" value="1" class="form-control form-control-sm mx-2 text-center"
+          style="width: 50px;">
         <button class="btn btn-outline-secondary btn-sm" onclick="adjustQty(1)">+</button>
         <strong class="ms-3">₹<span id="totalPrice">{{product.discounted_price}}</span></strong>
       </div>
@@ -64,7 +65,8 @@
       <form>
         <div class="d-flex flex-column flex-sm-row gap-2 mb-4">
           <button class="btn btn-orange w-100">Buy Now</button>
-          <button class="btn btn-outline-secondary w-100" id="addtocart" formaction="/add/{{ product.id }}/1/">Add to Cart</button>
+          <button class="btn btn-outline-secondary w-100" id="addtocart" formaction="/add/{{ product.id }}/1/">Add to
+            Cart</button>
         </div>
       </form>
 
@@ -93,9 +95,10 @@
         <h5>Check Delivery Date</h5>
         <div class="input-group" style="max-width: 350px;">
           <input type="text" id="pincodeInput" class="form-control" placeholder="Enter Pincode">
-          <button class="btn btn-outline-secondary" onclick="checkDelivery()">APPLY</button>
+          <button class="btn btn-outline-secondary" id="pincodeClick" onclick="checkDelivery()">APPLY</button>
         </div>
-        <small class="text-muted" id="text-para">Enter your pincode to check delivery availability, assembly info & details</small><br>
+        <small class="text-muted" id="text-para">Enter your pincode to check delivery availability, assembly info &
+          details</small><br>
         <small class="text-muted" id="text-para2"></small>
       </div>
     </div>
@@ -109,83 +112,119 @@
   }
 </style>
 
-  <!-- JS -->
-  <script>
-    function checkDelivery() {
-      const pincode = document.getElementById("pincodeInput").value;
-      const result = document.getElementById("text-para");
-      const result2 = document.getElementById("text-para2");
-      const now = new Date();
-      const istDate = new Date(now.toLocaleString("en-US", { timeZone: "Asia/Kolkata" }));
-      const days = ["Sunday", "Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday", "Sunday", "Monday"];
-      const months = ["January", "February", "March", "April", "May", "June", "July", "August", "September", "October", "November", "December"];
-      const today = new Date();
-      fetch(`https://api.postalpincode.in/pincode/${pincode}`)
-        .then(response => {
-          if (!response.ok) {
-            throw new Error('Network response was not ok');
-          }
-          return response.json();
-        })
+<!-- JS -->
+<script>
 
-        .then(data => {
-          if (data[0].Status == "Success") {
-            const locarray = ["Thrissur", "Alappuzha", "Ernakulam"]
-            const location = data[0]["PostOffice"];
-            result.setAttribute('style', 'font-weight:bold')
-            for (let index = 0; index < location.length; index++) {
-              if (locarray.includes(location[index].District)) {
-                result.innerText = `FREE delivery by ${days[today.getDay() + 2]}, ${istDate.getDate() + 2} ${months[today.getMonth()]} `;
+  var input = document.getElementById("pincodeInput");
+  // Execute a function when the user presses a key on the keyboard
+  input.addEventListener("keypress", function (event) {
+    // If the user presses the "Enter" key on the keyboard
+    if (event.key === "Enter") {
+      // Cancel the default action, if needed
+      event.preventDefault();
+      // Trigger the button element with a click
+      document.getElementById("pincodeClick").click();
+    }
+  });
+  function checkDelivery() {
+    const pincode = document.getElementById("pincodeInput").value;
+    const result = document.getElementById("text-para");
+    const result2 = document.getElementById("text-para2");
+    const now = new Date();
+    const istDate = new Date(now.toLocaleString("en-US", { timeZone: "Asia/Kolkata" }));
+    const days = ["Sunday", "Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday", "Sunday", "Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday"];
+    const months = ["January", "February", "March", "April", "May", "June", "July", "August", "September", "October", "November", "December"];
+    let today = new Date();
+    fetch(`https://api.postalpincode.in/pincode/${pincode}`)
+      .then(response => {
+        if (!response.ok) {
+          throw new Error('Network response was not ok');
+        }
+        return response.json();
+      })
+
+      .then(data => {
+        if (data[0].Status == "Success") {
+          const locarray = ["Thrissur", "Alappuzha", "Ernakulam"]
+          const location = data[0]["PostOffice"];
+          result.setAttribute('style', 'font-weight:bold')
+          for (let index = 0; index < location.length; index++) {
+            if (locarray.includes(location[index].District)) {
+              if ((today.getDate() + 2) > (getDaysInMonth(today.getFullYear(), today.getMonth()))) {
+                let month = today.getMonth();
+                const newDate = (today.getDate() + 2) - (getDaysInMonth(today.getFullYear(), today.getMonth() + 1));
+                today.setDate(newDate);
+                today.setMonth(month + 1);
+                result.innerText = `FREE delivery by ${days[today.getDay()]}, ${today.getDate()} ${months[today.getMonth()]} `;
                 result2.innerText = `Deliver to ${location[index].Division},${location[index].District} ${pincode} `;
-                break;
               } else {
-                result.innerText = `FREE delivery by ${days[today.getDay() + 7]}, ${today.getDay()} ${months[today.getMonth()]} `;
+                result.innerText = `FREE delivery by ${days[today.getDay() + 2]}, ${today.getDate() + 2} ${months[today.getMonth()]} `;
                 result2.innerText = `Deliver to ${location[index].Block},${location[index].District} ${pincode} `;
-                break;
               }
+              break;
+            } else {
+              if ((today.getDate() + 7) > (getDaysInMonth(today.getFullYear(), today.getMonth()))) {
+                let month = today.getMonth();
+                const newDate = (today.getDate() + 7) - (getDaysInMonth(today.getFullYear(), today.getMonth() + 1));
+                today.setDate(newDate);
+                today.setMonth(month + 1);
+                result.innerText = `FREE delivery by ${days[today.getDay()]}, ${today.getDate()} ${months[today.getMonth()]} `;
+                result2.innerText = `Deliver to ${location[index].Block},${location[index].District} ${pincode} `;
+              } else {
+                result.innerText = `FREE delivery by ${days[today.getDay() + 7]}, ${istDate.getDate() + 7} ${months[today.getMonth()]} `;
+                result2.innerText = `Deliver to ${location[index].Block},${location[index].District} ${pincode} `;
+              }
+              break;
             }
-          } else {
-            result.setAttribute('style', 'font-weight:bold');
-            result.innerText = "Please enter a valid pincode";
-            result2.innerText = "";
           }
+        } else {
+          result.setAttribute('style', 'font-weight:bold');
+          result.innerText = "Please enter a valid pincode";
+          result2.innerText = "";
+        }
 
-        })
-        .catch(error => console.error('There was a problem with the fetch operation:', error));
+      })
+      .catch(error => console.error('There was a problem with the fetch operation:', error));
 
-    }
-    const mainImage = document.getElementById("mainImage");
-    const thumbnails = document.querySelectorAll(".thumbnail-img");
-    const qtyInput = document.getElementById("qtyInput");
-    const url = document.getElementById("addtocart");
-    let qtyValue = qtyInput.value;
-    const totalPriceEl = document.getElementById("totalPrice");
-    const pricePerUnit = parseInt(document.getElementById("totalPrice").textContent.replace(",", ""));
-    const productId = "{{ product.id }}";
+  }
 
-    function changeImage(el) {
-      thumbnails.forEach(img => img.classList.remove("active"));
-      el.classList.add("active");
-      mainImage.src = el.src;
-    }
+  function getDaysInMonth(year, month) {
+    return new Date(year, month, 0).getDate();
+  }
+  const mainImage = document.getElementById("mainImage");
+  const thumbnails = document.querySelectorAll(".thumbnail-img");
+  const qtyInput = document.getElementById("qtyInput");
+  const url = document.getElementById("addtocart");
+  let qtyValue = qtyInput.value;
+  const totalPriceEl = document.getElementById("totalPrice");
+  const pricePerUnit = parseInt(document.getElementById("totalPrice").textContent.replace(",", ""));
+  const productId = "{{ product.id }}";
 
-    function adjustQty(val) {
-      let qty = parseInt(qtyInput.value);
-      qty = isNaN(qty) ? 1 : qty;
-      qty = Math.max(1, qty + val);
-      qtyInput.value = qty;
-      qtyValue = qty;
-      url.setAttribute("formaction", `/add/${productId}/${qtyValue}/`);
-      totalPriceEl.textContent = qty * pricePerUnit;
-    }
+  function changeImage(el) {
+    thumbnails.forEach(img => img.classList.remove("active"));
+    el.classList.add("active");
+    mainImage.src = el.src;
+  }
 
-    qtyInput.addEventListener("input", () => {
-      let qty = parseInt(qtyInput.value);
-      qty = isNaN(qty) || qty < 1 ? 1 : qty;
-      qtyInput.value = qty;
-      totalPriceEl.textContent = qty * pricePerUnit;
-    });
+  function adjustQty(val) {
+    let qty = parseInt(qtyInput.value);
+    qty = isNaN(qty) ? 1 : qty;
+    qty = Math.max(1, qty + val);
+    qtyInput.value = qty;
+    qtyValue = qty;
+    url.setAttribute("formaction", `/add/${productId}/${qtyValue}/`);
+    totalPriceEl.textContent = qty * pricePerUnit;
+  }
+
+  qtyInput.addEventListener("input", () => {
+    let qty = parseInt(qtyInput.value);
+    qty = isNaN(qty) || qty < 1 ? 1 : qty;
+    qtyInput.value = qty;
+    totalPriceEl.textContent = qty * pricePerUnit;
+  });
 
 
-  </script>
-  {% endblock content %}
+
+
+</script>
+{% endblock content %}
