--- a/furniture/furni/templates/furni/cart_total.html
+++ b/furniture/furni/templates/furni/cart_total.html
@@ -10,14 +10,24 @@
           <span>-₹{{ discount|intcomma }}</span>
         </div>
         <div class="d-flex justify-content-between mb-2">
-          <span>Delivery Charges</span>
-          <span class="text-success">Free</span>
-        </div>
-        <hr>
-        <div class="d-flex justify-content-between fw-bold mb-2">
           <span>Total Amount</span>
           <span>₹{{ total_amount|intcomma }}</span>
         </div>
+        <div class="d-flex justify-content-between mb-2">
+          <span>Delivery Charges</span>
+          {% if delivery == "Free Delivery" %}
+          <span class="text-success">{{delivery}}</span>
+          {% else %}
+          <span class="text-success">₹{{delivery}}</span>
+          {% endif %}
+        </div>
+        <hr>
+        <div class="d-flex justify-content-between fw-bold mb-2">
+          <span>Grand Total</span>
+          <span>₹{{ grand_total|intcomma }}</span>
+        </div>
         <p class="text-success small">You will save ₹{{ discount|intcomma }} on this order</p>
-        <button class="btn btn-dark btn-lg w-100 mt-2" onclick="window.location=''">Proceed to Checkout</button>
+        {% if cart_items|length > 0 %}
+        <button class="btn btn-dark btn-lg w-100 mt-2" onclick="window.location='{% url 'checkout' %}'">Proceed to Checkout</button>
+        {% endif %}
     </div>
