--- a/furniture/templates/footer.html
+++ b/furniture/templates/footer.html
@@ -77,7 +77,7 @@
 
 					<div class="col-6 col-sm-6 col-md-3">
 						<ul class="list-unstyled">
-							<li><a href="#">Blog</a></li>
+							<li><a href="">Blog</a></li>
 							<li><a href="#">Contact us</a></li>
 						</ul>
 					</div>
