--- a/furniture/furni/templates/furni/cart_list.html
+++ b/furniture/furni/templates/furni/cart_list.html
@@ -1,6 +1,7 @@
 {% for item in cart_items %}
 {% load humanize %}
 <!-- Product Image -->
+ {% if item.product %}
  <div class="d-flex border-bottom py-3" id="cart_content">
           <div class="me-3">
             <a href="{% url 'product' cat_id=item.product.category.id prod_id=item.product.id %}">
@@ -13,7 +14,7 @@
             <a href="{% url 'product' cat_id=item.product.category.id prod_id=item.product.id %}" class="text-decoration-none">
               <h5 class="mb-1">{{ item.product.name }}</h5>
             </a>
-            <p class="text-muted small mb-1">Seller: <strong>Assured</strong></p>
+            <p class="text-muted small mb-1">Seller: <strong>Module</strong></p>
             <p class="mb-1">
               <span class="fw-bold">₹{{ item.product.discounted_price|intcomma }}</span>
               {% if item.product.original_price %}
@@ -37,4 +38,5 @@
             <a href="{% url 'delete_from_cart' cart_item_id=item.id %}" class="btn btn-sm btn-outline-danger">Remove</a>
           </div>
         </div>
+        {% endif %}
 {% endfor %}
