--- a/furniture/furni/templates/furni/checkout.html
+++ b/furniture/furni/templates/furni/checkout.html
@@ -2,6 +2,13 @@
 {% load humanize %}
 {% block content %}
 
+<style>
+	input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button { 
+  -webkit-appearance: none; 
+  margin: 0; 
+}
+</style>
 		<!-- Start Hero Section -->
 			<div class="hero">
 				<div class="container">
@@ -20,6 +27,9 @@
 		<!-- End Hero Section -->
 
 		<div class="untree_co-section">
+		<!-- template.html -->
+
+
 		    <div class="container">
 		      <div class="row mb-5">
 		        <div class="col-md-12">
@@ -28,76 +38,77 @@
 		          </div>
 		        </div>
 		      </div>
+			  <form method="post">
+				{% csrf_token %}
 		      <div class="row">
 		        <div class="col-md-6 mb-5 mb-md-0">
 		          <h2 class="h3 mb-3 text-black">Billing Details</h2>
 		          <div class="p-3 p-lg-5 border bg-white">
 		            <div class="form-group">
-		              <label for="c_country" class="text-black">Country <span class="text-danger">*</span></label>
-		              <select id="c_country" class="form-control">
-		                <option value="1">Select a country</option>    
-		                <option value="2">bangladesh</option>    
-		                <option value="3">Algeria</option>    
+		              <label for="country" class="text-black">Country <span class="text-danger">*</span></label>
+		              <select class="form-control" name="country" id="country" required>
+		                <option value="1" hidden>Select a country</option>    
+		                <option value="{{ form.country.value|default:'' }}" selected>India</option>    
+		                <!--
+						<option value="3">Algeria</option>    
 		                <option value="4">Afghanistan</option>    
 		                <option value="5">Ghana</option>    
 		                <option value="6">Albania</option>    
 		                <option value="7">Bahrain</option>    
 		                <option value="8">Colombia</option>    
-		                <option value="9">Dominican Republic</option>    
+		                <option value="9">Dominican Republic</option>
+						-->
 		              </select>
 		            </div>
 		            <div class="form-group row">
 		              <div class="col-md-6">
-		                <label for="c_fname" class="text-black">First Name <span class="text-danger">*</span></label>
-		                <input type="text" class="form-control" id="c_fname" name="c_fname">
+		                <label for="firstname" class="text-black">First Name <span class="text-danger">*</span></label>
+		                <input type="text" class="form-control" id="firstname" name="firstname" value="{{ form.firstname.value|default:'' }}" required>
 		              </div>
 		              <div class="col-md-6">
-		                <label for="c_lname" class="text-black">Last Name <span class="text-danger">*</span></label>
-		                <input type="text" class="form-control" id="c_lname" name="c_lname">
+		                <label for="lastname" class="text-black">Last Name <span class="text-danger">*</span></label>
+		                <input type="text" class="form-control" id="lastname" name="lastname" value="{{ form.lastname.value|default:'' }}" required>
 		              </div>
 		            </div>
-
 		            <div class="form-group row">
 		              <div class="col-md-12">
-		                <label for="c_companyname" class="text-black">Company Name </label>
-		                <input type="text" class="form-control" id="c_companyname" name="c_companyname">
-		              </div>
-		            </div>
-
-		            <div class="form-group row">
-		              <div class="col-md-12">
-		                <label for="c_address" class="text-black">Address <span class="text-danger">*</span></label>
-		                <input type="text" class="form-control" id="c_address" name="c_address" placeholder="Street address">
+		                <label for="address" class="text-black">Address <span class="text-danger">*</span></label>
+		                <input type="text" class="form-control" required id="address" name="address" placeholder="Street address" value="{{ form.address.value|default:'' }}">
 		              </div>
 		            </div>
 
 		            <div class="form-group mt-3">
-		              <input type="text" class="form-control" placeholder="Apartment, suite, unit etc. (optional)">
+		              <input type="text" class="form-control" required id="street" name="street" placeholder="Apartment, suite, unit etc. (optional)" value="{{ form.street.value|default:'' }}">
 		            </div>
 
 		            <div class="form-group row">
 		              <div class="col-md-6">
-		                <label for="c_state_country" class="text-black">State / Country <span class="text-danger">*</span></label>
-		                <input type="text" class="form-control" id="c_state_country" name="c_state_country">
+		                <label for="state" class="text-black">State / Country <span class="text-danger">*</span></label>
+		                <input type="text" class="form-control" required id="state" name="state" value="{{ form.state.value|default:'' }}">
+		              </div>
+					  <div class="col-md-6">
+		                <label for="city" class="text-black">City<span class="text-danger">*</span></label>
+		                <input type="text" class="form-control" required id="city" name="city" value="{{ form.city.value|default:'' }}">
 		              </div>
 		              <div class="col-md-6">
-		                <label for="c_postal_zip" class="text-black">Posta / Zip <span class="text-danger">*</span></label>
-		                <input type="text" class="form-control" id="c_postal_zip" name="c_postal_zip">
+		                <label for="pincode" class="text-black">Postal / Zip <span class="text-danger">*</span></label>
+		                <input type="number" class="form-control" required id="pincode" name="pincode" value="{{ form.pincode.value|default:'' }}">
 		              </div>
 		            </div>
 
 		            <div class="form-group row mb-5">
 		              <div class="col-md-6">
-		                <label for="c_email_address" class="text-black">Email Address <span class="text-danger">*</span></label>
-		                <input type="text" class="form-control" id="c_email_address" name="c_email_address">
+		                <label for="email" class="text-black">Email Address <span class="text-danger">*</span></label>
+		                <input type="email" class="form-control" id="email" required name="email" value="{{ form.email.value|default:'' }}">
 		              </div>
 		              <div class="col-md-6">
-		                <label for="c_phone" class="text-black">Phone <span class="text-danger">*</span></label>
-		                <input type="text" class="form-control" id="c_phone" name="c_phone" placeholder="Phone Number">
+		                <label for="phone" class="text-black">Phone <span class="text-danger">*</span></label>
+		                <input type="number" class="form-control" id="phone" required name="phone" placeholder="Phone Number" value="{{ form.phone.value|default:'' }}">
 		              </div>
 		            </div>
 
-		            <div class="form-group">
+		            <!--
+					<div class="form-group">
 		              <label for="c_create_account" class="text-black" data-bs-toggle="collapse" href="#create_an_account" role="button" aria-expanded="false" aria-controls="create_an_account"><input type="checkbox" value="1" id="c_create_account"> Create an account?</label>
 		              <div class="collapse" id="create_an_account">
 		                <div class="py-2 mb-4">
@@ -109,8 +120,9 @@
 		                </div>
 		              </div>
 		            </div>
+				-->
 
-
+				<!--
 		            <div class="form-group">
 		              <label for="c_ship_different_address" class="text-black" data-bs-toggle="collapse" href="#ship_different_address" role="button" aria-expanded="false" aria-controls="ship_different_address"><input type="checkbox" value="1" id="c_ship_different_address"> Ship To A Different Address?</label>
 		              <div class="collapse" id="ship_different_address">
@@ -187,16 +199,20 @@
 
 		              </div>
 		            </div>
+				-->
 
+				<!--
 		            <div class="form-group">
 		              <label for="c_order_notes" class="text-black">Order Notes</label>
 		              <textarea name="c_order_notes" id="c_order_notes" cols="30" rows="5" class="form-control" placeholder="Write your notes here..."></textarea>
 		            </div>
+					-->
 
 		          </div>
 		        </div>
 		        <div class="col-md-6">
 
+					<!--
 		          <div class="row mb-5">
 		            <div class="col-md-12">
 		              <h2 class="h3 mb-3 text-black">Coupon Code</h2>
@@ -213,6 +229,7 @@
 		              </div>
 		            </div>
 		          </div>
+				-->
 
 				  {% if page == "cart_checkout" %}
 		          <div class="row mb-5">
@@ -283,8 +300,10 @@
 		                  </div>
 		                </div>
 
+{{ form.errors }}
+
 		                <div class="form-group">
-		                  <button class="btn btn-black btn-lg py-3 btn-block" onclick="window.location='thankyou.html'">Place Order</button>
+		                  <button class="btn btn-black btn-lg py-3 btn-block" type="submit">Place Order</button>
 		                </div>
 
 		              </div>
@@ -354,7 +373,8 @@
 		                </div>
 
 		                <div class="form-group">
-		                  <button class="btn btn-black btn-lg py-3 btn-block" onclick="window.location='thankyou.html'">Place Order</button>
+		                  <button class="btn btn-black btn-lg py-3 btn-block" type="submit">Place Order</button>
+						  
 		                </div>
 
 		              </div>
@@ -363,7 +383,7 @@
 				  {% endif %}
 		        </div>
 		      </div>
-		      <!-- </form> -->
+		      </form> 
 		    </div>
 		  </div>
 {% endblock content %}
