--- a/furniture/furni/templates/furni/home.html
+++ b/furniture/furni/templates/furni/home.html
@@ -42,7 +42,7 @@
 		<div class="why-choose-section">
 			<div class="container">
 				
-				
+				<p>{{usersession}}</p>
 				<div class="row my-5">
 					<div class="col-6 col-md-6 col-lg-3 mb-4">
 						<div class="feature">
