--- a/furniture/templates/navbar.html
+++ b/furniture/templates/navbar.html
@@ -61,6 +61,12 @@
         <li><a class="dropdown-item" href="{% url 'logoutpage' %}">
           <i class="fas fa-sign-out-alt me-2"></i> Log out
         </a></li>
+		<li><a class="dropdown-item" href="{% url 'profile' %}">
+          <i class="fa-solid fa-user me-2"></i> Profile
+        </a></li>
+		<li><a class="dropdown-item" href="{% url 'orders' %}">
+          <i class="fa-solid fa-truck me-2"></i> Orders
+        </a></li>
         <!--<li><hr class="dropdown-divider"></li>-->
     </ul>
 	{% else %}
