--- a/furniture/templates/footer.html
+++ b/furniture/templates/footer.html
@@ -54,7 +54,7 @@
 				<div class="row links-wrap">
 					<div class="col-6 col-sm-6 col-md-3">
 						<ul class="list-unstyled">
-							<li><a href="#">About us</a></li>
+							<li><a href="{% url 'aboutus' %}">About us</a></li>
 							<li><a href="{% url 'services' %}">Services</a></li>
 
 						</ul>
@@ -70,7 +70,7 @@
 					<div class="col-6 col-sm-6 col-md-3">
 						<ul class="list-unstyled">
 							<li><a href="#">Jobs</a></li>
-							<li><a href="#">Our team</a></li>
+							<li><a href="#">Track Order</a></li>
 
 						</ul>
 					</div>
@@ -78,7 +78,7 @@
 					<div class="col-6 col-sm-6 col-md-3">
 						<ul class="list-unstyled">
 							<li><a href="">Blog</a></li>
-							<li><a href="#">Contact us</a></li>
+							<li><a href="{% url 'contactus' %}">Contact us</a></li>
 						</ul>
 					</div>
 				</div>
