--- a/furniture/furni/templates/furni/leaders.html
+++ b/furniture/furni/templates/furni/leaders.html
@@ -34,7 +34,7 @@
             
             <!-- Front -->
             <div class="flip-card-front text-center">
-              <img src="{% static 'images\leader1.jpeg' %}" 
+              <img src="{% static 'images\leader.jpeg' %}" 
                    class="img-fluid rounded-circle mb-3" 
                    alt="Leader 1" width="200" height="200" style="object-fit: cover;">
               <h5 class="fw-bold text-dark">Anand Anil</h5>
