--- a/furniture/furni/templates/furni/leaders.html
+++ b/furniture/furni/templates/furni/leaders.html
@@ -7,7 +7,7 @@
     <div class="row justify-content-between">
       <div class="col-lg-5">
         <div class="intro-excerpt">
-          <h1>Our Leads<span class="d-block"></span></h1>
+          <h1>Our Leaders<span class="d-block"></span></h1>
           <p class="mb-4">Behind every achievement stands a team of leaders who bring together expertise, dedication, and a shared vision for the future. Discover the people who guide us forward with passion and purpose.</p>
           <p><a href="shop" class="btn btn-secondary me-2">Shop Now</a><a href="shop" class="btn btn-white-outline">Explore</a>
           </p>
